# IMACRUN_3D

./: .gitignore  CMakeLists.txt  README.md
assets/map/: map_elements.txt
assets/models/Cobblestones/: CobbleStones.mtl
assets/models/barrel/: barrel.mtl
assets/models/bottle/: bottle.mtl
assets/models/fence/: fence.mtl
assets/models/gate_1/: gate_1.mtl
assets/models/gate_2/: gate_2.mtl
assets/models/gate_3/: gate_3.mtl
assets/models/gate_4/: gate_4.mtl
assets/models/lantern/: lantern.mtl
assets/models/plank/: plank.mtl
assets/models/skybox/: skybox.mtl
assets/models/wall/: wall.mtl
assets/models/witch/: witch.mtl
assets/models/wizard/: wizard.mtl
doc/: Doxyfile
doc/html/: annotated.html  classes.html  dir_000000_000001.html  dir_000000_000003.html  dir_000003_000000.html  dir_000003_000001.html  dir_000003_000002.html  dir_000004_000000.html  dir_0e01513eafa252a1fbdc704793ad904c.html  dir_0e01513eafa252a1fbdc704793ad904c_dep.dot  dir_45a5dd3b65f9de0d1a7d23c6429180a4.html  dir_45a5dd3b65f9de0d1a7d23c6429180a4_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_c1f036a2540afdaa3c631db479fcff44.html  dir_c1f036a2540afdaa3c631db479fcff44_dep.dot  dir_f926e7196becc112486bc2cf46a47be6.html  dir_f926e7196becc112486bc2cf46a47be6_dep.dot  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_j.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  (+18 more)
doc/html/d0/d14/: _image_8hpp__incl.dot
doc/html/d0/d16/: _player_8hpp.html  _player_8hpp_source.html
doc/html/d0/d43/: _sphere_8hpp.html  _sphere_8hpp_source.html
doc/html/d0/d71/: struct_button-members.html
doc/html/d0/d90/: class_model-members.html
doc/html/d0/d96/: struct_shader-members.html
doc/html/d0/dac/: _image_8cpp.html
doc/html/d0/dbe/: _text2_d_8hpp__dep__incl.dot
doc/html/d0/de3/: class_model.html
doc/html/d0/df4/: _menu_renderer_8cpp.html
doc/html/d1/d15/: _app_8hpp__dep__incl.dot
doc/html/d1/d33/: _camera_8cpp.html
doc/html/d1/d38/: _menu_renderer_8hpp.html  _menu_renderer_8hpp_source.html
doc/html/d1/d42/: structmatrix-members.html
doc/html/d1/d45/: _image_8cpp__incl.dot
doc/html/d1/d52/: classglimac_1_1_file_path-members.html
doc/html/d1/d69/: struct_character-members.html
doc/html/d1/da3/: _camera_8hpp__incl.dot
doc/html/d1/dda/: struct_textures.html
doc/html/d1/de6/: classglimac_1_1_image_manager-members.html
doc/html/d2/d07/: _game_8hpp.html  _game_8hpp_source.html
doc/html/d2/d08/: classglimac_1_1_sphere-members.html
doc/html/d2/d31/: _model_8cpp.html
doc/html/d2/d34/: _text2_d_8hpp__incl.dot
doc/html/d2/d4a/: struct_button.html
doc/html/d2/d4b/: _texture_8hpp.html  _texture_8hpp_source.html
doc/html/d2/d73/: _shader_8hpp.html  _shader_8hpp_source.html
doc/html/d2/d7f/: class_texture.html
doc/html/d2/d82/: _player_8cpp.html
doc/html/d2/da8/: struct_score.html
doc/html/d2/db8/: class_menu.html
doc/html/d2/dc6/: _game_renderer_8cpp__incl.dot
doc/html/d2/dde/: classglimac_1_1_program.html
doc/html/d2/dee/: class_menu_renderer.html
doc/html/d3/d38/: classglimac_1_1_shader.html
doc/html/d3/d62/: structstd_1_1hash_3_01_vertex_01_4.html
doc/html/d3/d75/: get_time_8hpp.html  get_time_8hpp_source.html
doc/html/d3/db5/: struct_score-members.html
doc/html/d3/dbc/: _camera_8hpp__dep__incl.dot
doc/html/d3/dec/: common_8hpp__incl.dot
doc/html/d4/d2f/: _sphere_8hpp__incl.dot
doc/html/d4/d36/: class_game-members.html
doc/html/d4/d5a/: _map_8hpp__dep__incl.dot
doc/html/d4/d6a/: _camera_8hpp.html  _camera_8hpp_source.html
doc/html/d4/d97/: glm_8hpp__incl.dot
doc/html/d4/de7/: structstd_1_1hash_3_01glimac_1_1_file_path_01_4.html
doc/html/d5/d07/: _menu_8cpp.html
doc/html/d5/d12/: _map_8hpp__incl.dot
doc/html/d5/d16/: _shader_8cpp.html
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enums_1.js  enums_2.js  (+61 more)
include/: App.hpp
lib/glimac/: CMakeLists.txt
lib/glimac/src/: FreelyCamera.cpp  TrackballCamera.cpp
saves/: scores.txt
src/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  Image.cpp  Map.cpp  Map.hpp  Menu.cpp  Menu.hpp  Player.cpp  Player.hpp  Screen.cpp  Screen.hpp  TrackballCamera.cpp  getTime.hpp  main.cpp
src/app/: App.hpp
src/appEngine/: App.cpp  App.hpp  Menu.cpp  Menu.hpp
src/gameEngine/: Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp
src/glimac/: FreelyCamera.cpp  FreelyCamera.hpp  Image.cpp  Shader.cpp  Sphere.cpp  TrackballCamera.hpp  menu.cpp
src/renderEngine/: GameRenderer.cpp  GameRenderer.hpp  MenuRenderer.cpp  MenuRenderer.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Text2D.cpp  Text2D.hpp  Texture.cpp  Texture.hpp
src/renderEngine/shaders/: model.fs.glsl  model.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  text2D.fs.glsl  text2D.vs.glsl  texture2D.fs.glsl  texture2D.vs.glsl
src/rendering/: GameRenderer.cpp  GameRenderer.hpp  MapRenderer.cpp  MapRenderer.hpp  MenuRenderer.cpp  MenuRenderer.hpp  Mesh.cpp  Mesh.hpp  Model copy.cpp  Model.cpp  Model.hpp  Object3D.cpp  Object3D.hpp  Screen.cpp  Screen.hpp  Text.cpp  Text.hpp  Text2D.cpp  Text2D.hpp  Texture.cpp  Texture.hpp
src/shaders/: 3D.vs.glsl  model.fs.glsl  model.vs.glsl  multiTex3D.fs.glsl  skybox.fs.glsl  tex3D.fs.glsl  text2D.fs.glsl  text2D.vs.glsl  texture2D.fs.glsl  texture2D.vs.glsl  triangle.fs.glsl  triangle.vs.glsl
(+122 files in other folders)
